// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image with simple step options simple image 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      data-pristine=\\"test.png\\"
      sizes=\\"100vw\\"
      srcset=\\"test-120.png 120w, test-220.png 220w, test-320.png 320w\\"
      src=\\"test-640.png\\"
    />
  </body>
</html>
"
`;

exports[`image with simple step options simple image with bad number of steps 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      data-pristine=\\"test.png\\"
      sizes=\\"100vw\\"
      srcset=\\"test-320.png 320w, test-1280.png 1280w\\"
      src=\\"test-640.png\\"
    />
  </body>
</html>
"
`;

exports[`image with simple step options simple image with minWidth = maxWidth 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      data-pristine=\\"test.png\\"
      sizes=\\"100vw\\"
      srcset=\\"test-320.png 320w\\"
      src=\\"test-640.png\\"
    />
  </body>
</html>
"
`;

exports[`image with simple step options simple image with minWidth > maxWidth 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      data-pristine=\\"test.png\\"
      sizes=\\"100vw\\"
      srcset=\\"
        test-320.png 320w,
        test-400.png 400w,
        test-480.png 480w,
        test-560.png 560w,
        test-640.png 640w
      \\"
      src=\\"test-640.png\\"
    />
  </body>
</html>
"
`;
